--- a/SigningDay/en.lproj/MainStoryboard.storyboard
+++ b/SigningDay/en.lproj/MainStoryboard.storyboard
@@ -227,7 +227,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ObL-1Y-kbt">
-                                <rect key="frame" x="70" y="65" width="101" height="72"/>
+                                <rect key="frame" x="80" y="65" width="91" height="72"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal">
@@ -238,7 +238,22 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="1dH-LY-mWD" kind="push" id="DNQ-HQ-uOo"/>
+                                    <segue destination="1dH-LY-mWD" kind="push" identifier="following" id="DNQ-HQ-uOo"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="wcG-Mm-b0E">
+                                <rect key="frame" x="0.0" y="65" width="80" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="1dH-LY-mWD" kind="push" identifier="Followers" id="XSV-J9-nTN"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1450,177 +1465,13 @@
         <image name="send_button.png" width="76" height="31"/>
         <image name="submit_button.png" width="213" height="38"/>
     </resources>
-    <classes>
-        <class className="RXCustomTabBar" superclassName="UITabBarController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RXCustomTabBar.h"/>
-        </class>
-        <class className="SDAddTagsCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDAddTagsCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="bottomLine" candidateClass="UIView"/>
-                <relationship kind="outlet" name="checkboxImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="userImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="userTitleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="SDAddTagsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDAddTagsViewController.h"/>
-        </class>
-        <class className="SDCommonWebViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDCommonWebViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-        <class className="SDConversationCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDConversationCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="bottomLineView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="messageTextLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="userImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="usernameLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="SDConversationViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDConversationViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="chatBar" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="containerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="enterMessageTextView" candidateClass="UITextView"/>
-                <relationship kind="outlet" name="sendButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="tableView" candidateClass="ShadowedTableView"/>
-                <relationship kind="outlet" name="textViewBackgroundImageView" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="SDConversationsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDConversationsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="ShadowedTableView"/>
-            </relationships>
-        </class>
-        <class className="SDEditProfileViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDEditProfileViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="submitButtonPressed"/>
-                <relationship kind="outlet" name="bioTextView" candidateClass="UITextView"/>
-                <relationship kind="outlet" name="nameTextView" candidateClass="UITextView"/>
-            </relationships>
-        </class>
-        <class className="SDEnterMediaInfoViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDEnterMediaInfoViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="descriptionTextView" candidateClass="UIPlaceHolderTextView"/>
-                <relationship kind="outlet" name="tagsLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="titleTextView" candidateClass="UIPlaceHolderTextView"/>
-            </relationships>
-        </class>
-        <class className="SDFollowingCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDFollowingCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="bottomLine" candidateClass="UIView"/>
-                <relationship kind="outlet" name="followButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="userImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="usernameTitle" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="SDFollowingViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDFollowingViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="followButtonPressed:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
-            </relationships>
-        </class>
-        <class className="SDForgotPasswordViewController" superclassName="SDCommonWebViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDForgotPasswordViewController.h"/>
-        </class>
-        <class className="SDLoginViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDLoginViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="loginButtonPressed:"/>
-                <relationship kind="outlet" name="backgroundImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="passwordTextField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="usernameTextField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="SDMessageCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDMessageCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="bottomLineView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="messageTextLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="userImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="usernameLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="SDNavigationController" superclassName="UINavigationController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDNavigationController.h"/>
-        </class>
-        <class className="SDNewConversationCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDNewConversationCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="bottomLine" candidateClass="UIView"/>
-                <relationship kind="outlet" name="userImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="usernameTitle" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="SDNewConversationViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDNewConversationViewController.h"/>
-        </class>
-        <class className="SDPrivacyPolicyViewController" superclassName="SDCommonWebViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDPrivacyPolicyViewController.h"/>
-        </class>
-        <class className="SDProfileViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDProfileViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="avatarImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="bioTextView" candidateClass="UITextView"/>
-                <relationship kind="outlet" name="followersNumberLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="followingButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="followingNumberLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="nameLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="photosNumberLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="usernameLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="videosNumberLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="SDPublishPhotoTableViewController" superclassName="SDEnterMediaInfoViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDPublishPhotoTableViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="publishPhotoPressed:"/>
-            </relationships>
-        </class>
-        <class className="SDPublishVideoTableViewController" superclassName="SDEnterMediaInfoViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDPublishVideoTableViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="publishVideoPressed:"/>
-            </relationships>
-        </class>
-        <class className="SDSettingsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDSettingsViewController.h"/>
-        </class>
-        <class className="SDSharingSettingsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDSharingSettingsViewController.h"/>
-        </class>
-        <class className="SDTabBarController" superclassName="RXCustomTabBar">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDTabBarController.h"/>
-        </class>
-        <class className="SDTermsOfServiceViewController" superclassName="SDCommonWebViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SDTermsOfServiceViewController.h"/>
-        </class>
-        <class className="ShadowedTableView" superclassName="UITableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ShadowedTableView.h"/>
-        </class>
-        <class className="UIPlaceHolderTextView" superclassName="UITextView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIPlaceHolderTextView.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="DNQ-HQ-uOo"/>
         <segue reference="Hfi-Qy-haT"/>
     </inferredMetricsTieBreakers>
 </document>
