--- a/SigningDay/MainStoryboard.storyboard
+++ b/SigningDay/MainStoryboard.storyboard
@@ -12,9 +12,9 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView contentMode="scaleToFill" image="login_bg.png" id="mX1-sc-ilq">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView contentMode="scaleToFill" id="mX1-sc-ilq">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" id="ACW-25-4Rx">
                                 <rect key="frame" x="85" y="62" width="212" height="50"/>
@@ -1466,7 +1466,6 @@
         <image name="check_unselected.png" width="36" height="36"/>
         <image name="conversations_bottom.png" width="320" height="60"/>
         <image name="forgot_password.png" width="152" height="31"/>
-        <image name="login_bg.png" width="320" height="460"/>
         <image name="login_button.png" width="110" height="56"/>
         <image name="login_fb.png" width="211" height="35"/>
         <image name="plus_icon.png" width="36" height="36"/>
@@ -1563,6 +1562,8 @@
         <class className="SDLoginViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SDLoginViewController.h"/>
             <relationships>
+                <relationship kind="action" name="connectWithFacebookPressed:"/>
+                <relationship kind="action" name="connectWithTwitterPressed:"/>
                 <relationship kind="action" name="loginButtonPressed:"/>
                 <relationship kind="outlet" name="backgroundImageView" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="passwordTextField" candidateClass="UITextField"/>
@@ -1592,6 +1593,9 @@
         </class>
         <class className="SDNewConversationViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SDNewConversationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
+            </relationships>
         </class>
         <class className="SDPrivacyPolicyViewController" superclassName="SDCommonWebViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SDPrivacyPolicyViewController.h"/>
