--- a/SigningDay/MainStoryboard.storyboard
+++ b/SigningDay/MainStoryboard.storyboard
@@ -414,26 +414,10 @@
             </objects>
             <point key="canvasLocation" x="1997" y="-2416"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="lpk-zW-rwz">
-            <objects>
-                <navigationController storyboardIdentifier="NewConversationNavigationController" definesPresentationContext="YES" id="dXu-6j-ED9" customClass="SDNavigationController" sceneMemberID="viewController">
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CiH-RA-nVi">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="EfQ-oh-LgA" kind="relationship" relationship="rootViewController" id="Pcz-GN-6eV"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dJ0-T3-LW0" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1513" y="-1525"/>
-        </scene>
         <!--New Conversation View Controller - New Conversation-->
         <scene sceneID="R7n-ns-5f6">
             <objects>
-                <tableViewController id="EfQ-oh-LgA" customClass="SDNewConversationViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="NewConversationController" id="EfQ-oh-LgA" customClass="SDNewConversationViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="WKu-WZ-dLW">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -487,6 +471,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="New Conversation" id="FZg-DJ-BJh"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="searchBar" destination="FTW-PM-RUl" id="ftD-yh-Vki"/>
                         <outlet property="searchDisplayController" destination="V9m-w2-j2o" id="BnH-SF-hc1"/>
@@ -1658,7 +1643,7 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="XSV-J9-nTN"/>
